доработка оплаты