@@ -16,9 +16,8 @@ import org.springframework.messaging.simp.SimpMessagingTemplate;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.util.Comparator;
-import java.util.List;
-import java.util.Optional;
+import java.util.*;
+import java.util.stream.Collectors;
 
 @Service
 public class TurnService {
@@ -51,12 +50,12 @@ public class TurnService {
   }
 
   /**
-   * Выполняет перемещение Ассама, генерирует бросок кубика, обрабатывает оплату за наступление на чужой ковёр.
-   * Оплата определяется как сумма всех клеток, входящих в смежную группу (по сторонам) с конечной клеткой,
-   * на которых лежит верхний ковер того же цвета.
+   * Выполняет перемещение Ассама, генерирует бросок кубика, и если Ассам заканчивает ход на
+   * клетке с чужим верхним ковром, рассчитывает оплату. Оплата рассчитывается как размер группы
+   * смежных клеток, покрытых верхним слоем ковра, к которому принадлежит данная клетка.
    *
-   * @param gameId идентификатор игры
-   * @param movementDirection выбранное направление ("up", "down", "left", "right")
+   * @param gameId идентификатор игры.
+   * @param movementDirection выбранное направление ("up", "down", "left", "right").
    * @return MoveResponse, содержащий обновлённое состояние игры и число, выпавшее на кубике.
    */
   @Transactional
@@ -70,17 +69,19 @@ public class TurnService {
     gameService.moveAssam(game, movementDirection, diceRoll);
     gameRepository.save(game);
 
-    // Обработка оплаты за наступление на чужой ковёр
+    // Получаем конечные координаты Ассама
     int finalX = game.getAssamPositionX();
     int finalY = game.getAssamPositionY();
+
+    // Используем метод, возвращающий только верхнюю запись на этой клетке
     Optional<CarpetPosition> cpOpt = carpetPositionRepository.findTopByGameAndPositionOrderByPlacementTurnDesc(game.getId(), finalX, finalY);
     if (cpOpt.isPresent()) {
       Carpet topCarpet = cpOpt.get().getCarpet();
       User carpetOwner = topCarpet.getOwner();
       User currentUser = game.getCurrentTurn();
-      // Если верхний ковер принадлежит другому игроку, то производится оплата
+      // Если верхний ковер принадлежит противнику, рассчитываем платёж
       if (!carpetOwner.getId().equals(currentUser.getId())) {
-        int payment = carpetPositionRepository.findAllByCarpet(topCarpet).size();
+        int payment = calculatePayment(game.getId(), finalX, finalY, topCarpet);
         GamePlayer activeRecord = gamePlayerRepository.findByGameIdAndUserId(game.getId(), currentUser.getId())
             .orElseThrow(() -> new IllegalStateException("Active player's record not found"));
         GamePlayer ownerRecord = gamePlayerRepository.findByGameIdAndUserId(game.getId(), carpetOwner.getId())
@@ -90,7 +91,7 @@ public class TurnService {
         if (activeRecord.getCoins() <= 0) {
           activeRecord.setCoins(0);
           currentUser.setPlaying(false);
-          // Если игрок выбывает, удаляем его ковер (или применяем другую логику)
+          // Если игрок выбывает, его ковер удаляется
           carpetRepository.findByGameAndOwner(game, currentUser)
               .ifPresent(carpetRepository::delete);
         }
@@ -101,22 +102,75 @@ public class TurnService {
   }
 
   /**
-   * Переключает текущий ход.
+   * Расчитывает сумму оплаты как размер группы смежных клеток, на которых верхним слоем
+   * является тот же ковер.
    *
-   * @param gameId идентификатор игры
+   * @param gameId идентификатор игры.
+   * @param startX начальная клетка X.
+   * @param startY начальная клетка Y.
+   * @param targetCarpet целевой ковер (верхний ковер на клетке).
+   * @return размер группы клеток с ковром targetCarpet.
+   */
+  private int calculatePayment(Long gameId, int startX, int startY, Carpet targetCarpet) {
+    boolean[][] visited = new boolean[7][7];
+    Queue<int[]> queue = new LinkedList<>();
+    queue.offer(new int[]{startX, startY});
+    visited[startX][startY] = true;
+    int count = 0;
+    int[][] directions = { { -1, 0 }, { 1, 0 }, { 0, -1 }, { 0, 1 } };
+
+    while (!queue.isEmpty()) {
+      int[] current = queue.poll();
+      int cx = current[0];
+      int cy = current[1];
+
+      // Получаем верхний ковер для клетки (через findByGameAndPosition)
+      Optional<CarpetPosition> cp = carpetPositionRepository.findByGameAndPosition(gameId, cx, cy);
+      if (cp.isPresent()) {
+        Carpet currentCarpet = cp.get().getCarpet();
+        if (currentCarpet.getCarpetId().equals(targetCarpet.getCarpetId())) {
+          count++;
+          for (int[] dir : directions) {
+            int nx = cx + dir[0];
+            int ny = cy + dir[1];
+            if (nx >= 0 && nx < 7 && ny >= 0 && ny < 7 && !visited[nx][ny]) {
+              visited[nx][ny] = true;
+              queue.offer(new int[]{nx, ny});
+            }
+          }
+        }
+      }
+    }
+    return count;
+  }
+
+  /**
+   * Переключает текущий ход, увеличивает номер хода и отправляет уведомление через WebSocket.
+   *
+   * @param gameId идентификатор игры.
    * @return обновлённое состояние игры с переключённым ходом.
    */
   @Transactional
   public Game switchTurn(Long gameId) {
-    return gameTurnService.switchToNextTurn(gameId);
+    Game game = gameTurnService.switchToNextTurn(gameId);
+    checkGameCompletion(game);
+    return game;
   }
 
+  /**
+   * Проверяет, завершилась ли игра. Игра завершается, если:
+   * - Остался только один активный игрок, или
+   * - У всех активных игроков размещено не менее 12 ковров.
+   *
+   * При завершении игры отправляется уведомление через WebSocket.
+   *
+   * @param game игра, которую нужно проверить.
+   */
   private void checkGameCompletion(Game game) {
-    // Логика проверки завершения игры (не изменялась)
     List<GamePlayer> players = gamePlayerRepository.findByGameId(game.getId());
     List<GamePlayer> activePlayers = players.stream()
         .filter(gp -> gp.getUser().isPlaying())
-        .toList();
+        .collect(Collectors.toList());
 
     if (activePlayers.size() == 1) {
       game.setStatus("finished");
@@ -129,7 +183,6 @@ public class TurnService {
 
     boolean allPlayersFinished = activePlayers.stream()
         .allMatch(gp -> carpetRepository.countByGameAndOwner(game, gp.getUser()) >= 12);
-
     if (allPlayersFinished) {
       game.setStatus("finished");
       gameRepository.save(game);
@@ -139,44 +192,5 @@ public class TurnService {
       GameStatusUpdateMessage finishUpdate = new GameStatusUpdateMessage(game.getId(), game.getStatus(), winnerName);
       messagingTemplate.convertAndSend("/topic/game/" + game.getId() + "/status", finishUpdate);
     }
-  }
-
-  /**
-   * Рекурсивный метод для подсчёта количества клеток в смежной группе, имеющих верхний ковер заданного цвета.
-   * Соседство определяется по 4 направлениям (up, down, left, right).
-   *
-   * @param gameId идентификатор игры
-   * @param x текущая координата X
-   * @param y текущая координата Y
-   * @param color цвет, по которому ищем группу
-   * @param visited матрица посещённых клеток (размер 7x7)
-   * @return количество клеток в данной группе
-   */
-  private int countConnectedCarpetCells(Long gameId, int x, int y, String color, boolean[][] visited) {
-    if (x < 0 || x >= 7 || y < 0 || y >= 7) {
-      return 0;
-    }
-    if (visited[x][y]) {
-      return 0;
-    }
-    visited[x][y] = true;
-    Optional<CarpetPosition> cpOpt = carpetPositionRepository.findByGameAndPosition(gameId, x, y);
-    if (cpOpt.isEmpty()) {
-      return 0;
-    }
-    CarpetPosition cp = cpOpt.get();
-    // Мы будем считать только те клетки, где верхний ковер имеет нужный цвет.
-    if (!cp.getCarpet().getColor().equals(color)) {
-      return 0;
-    }
-    // Начинаем с текущей клетки (1)
-    int count = 1;
-    // Определяем четыре направления (up, down, left, right)
-    int[] dx = { -1, 1, 0, 0 };
-    int[] dy = { 0, 0, -1, 1 };
-    for (int i = 0; i < 4; i++) {
-      count += countConnectedCarpetCells(gameId, x + dx[i], y + dy[i], color, visited);
-    }
-    return count;
   }
 }
